Add backend project